[tool.poetry]
name = "textwatermark"
version = "0.1.4"
description = "A watermark library for text."
keywords = ["watermark", "text", 'blind']
readme = "README.md"
authors = ["Monyer <monyer@126.com>"]
maintainers = []
license = "Apache"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Plugins",
    "Framework :: Pytest",
    "Framework :: tox",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Natural Language :: Chinese (Simplified)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Topic :: Security",
    "Topic :: Text Processing",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Communications :: File Sharing",
]
homepage = "https://textwatermark.jd.army/"
repository = "https://github.com/JDArmy/TextWatermark"
documentation = "https://textwatermark.jd.army/"


[tool.poetry.dependencies]
python = "^3.8,<3.12"
dynaconf = "^3.1"
click = "^8.1"
bitstring = "^4.0"
numpy = "^1.24"

[tool.poetry.group.dev.dependencies]
tox = "^4.4"
virtualenv = "^20.19"
pylint = "^2.16"
isort = "^5.12"
pytest = "^7.2"
pytest-mock = "^3.10"
mkdocs = "^1.4"
mkdocs-material = "^9.0"
mkdocstrings = "^0.20"
mkdocstrings-python = "^0.8"
mkdocs-include-markdown-plugin = "^4.0"
mkdocs-static-i18n = "^0.53"
build = "^0.10"
twine = "^4.0"

[tool.poetry.scripts]
textwatermark = "textwatermark.cmdline:main"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/JDArmy/TextWatermark/issues"
"Changelog" = "https://textwatermark.jd.army/changelog/"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
